--- a/.github/workflows/gh_pages.yml
+++ b/.github/workflows/gh_pages.yml
@@ -17,7 +17,7 @@ jobs:
         npm install
         npm run-script build
       env:
-        REACT_APP_OPENAI_API_KEY: ${{secrets.OPENAI_API_KEY}}
+        REACT_APP_OPENAI_API_KEY: ${{env.OPENAI_API_KEY}}
     - name: Deploy
       uses: JamesIves/github-pages-deploy-action@4.1.4
       with:
