--- a/.github/workflows/gh_pages.yml
+++ b/.github/workflows/gh_pages.yml
@@ -8,7 +8,8 @@ on:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-    
+    env:
+        REACT_APP_OPENAI_API_KEY: ${{secrets.OPENAI_API_KEY}}
     steps:
     - name: Checkout
       uses: actions/checkout@v2
@@ -16,8 +17,6 @@ jobs:
       run : |
         npm install
         npm run-script build
-      env:
-        REACT_APP_OPENAI_API_KEY: ${{env.OPENAI_API_KEY}}
     - name: Deploy
       uses: JamesIves/github-pages-deploy-action@4.1.4
       with:
